// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates a graph from the petstore specification 1`] = `
Object {
  "edges": Any<Object>,
  "nodes": Any<Object>,
  "path": StringContaining "tests/resources/petstore",
}
`;

exports[`Creates a graph from the social-network specification 1`] = `
Object {
  "edges": Object {
    "ref": Object {
      "schemaRef": Object {
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Email": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "format": "email",
              "type": "string",
            },
            "name": "Email",
          },
          "ref": "#/components/schemas/Email",
          "tokenName": "Email",
          "type": "local",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Name": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "type": "string",
            },
            "name": "Name",
          },
          "ref": "#/components/schemas/Name",
          "tokenName": "Name",
          "type": "local",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/User": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "properties": Object {
                "email": Object {
                  "$ref": "#/components/schemas/Email",
                },
                "name": Object {
                  "$ref": "#/components/schemas/Name",
                },
                "username": Object {
                  "$ref": "#/components/schemas/Username",
                },
              },
              "required": Array [
                "username",
                "name",
                "email",
              ],
              "type": "object",
            },
            "name": "User",
          },
          "ref": "#/components/schemas/User",
          "tokenName": "User",
          "type": "local",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Username": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "type": "string",
            },
            "name": "Username",
          },
          "ref": "#/components/schemas/Username",
          "tokenName": "Username",
          "type": "local",
        },
      },
    },
  },
  "nodes": Object {
    "schemas": Object {
      "Email": SchemaNodeImpl {
        "content": Object {
          "format": "email",
          "type": "string",
        },
        "name": "Email",
      },
      "Name": SchemaNodeImpl {
        "content": Object {
          "type": "string",
        },
        "name": "Name",
      },
      "Post": SchemaNodeImpl {
        "content": Object {
          "properties": Object {
            "author": Object {
              "$ref": "#/components/schemas/User",
            },
            "content": Object {
              "type": "string",
            },
            "date": Object {
              "type": "string",
            },
          },
          "required": Array [
            "author",
            "date",
            "content",
          ],
          "type": "object",
        },
        "name": "Post",
      },
      "User": SchemaNodeImpl {
        "content": Object {
          "properties": Object {
            "email": Object {
              "$ref": "#/components/schemas/Email",
            },
            "name": Object {
              "$ref": "#/components/schemas/Name",
            },
            "username": Object {
              "$ref": "#/components/schemas/Username",
            },
          },
          "required": Array [
            "username",
            "name",
            "email",
          ],
          "type": "object",
        },
        "name": "User",
      },
      "Username": SchemaNodeImpl {
        "content": Object {
          "type": "string",
        },
        "name": "Username",
      },
    },
  },
  "path": StringContaining "tests/resources/social-network/social-network.yaml",
}
`;

exports[`Creates a graph from the social-network specification 2`] = `
Object {
  "edges": Object {
    "ref": Object {
      "schemaRef": Object {
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/User": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "properties": Object {
                "email": Object {
                  "$ref": "#/components/schemas/Email",
                },
                "name": Object {
                  "$ref": "#/components/schemas/Name",
                },
                "username": Object {
                  "$ref": "#/components/schemas/Username",
                },
              },
              "required": Array [
                "username",
                "name",
                "email",
              ],
              "type": "object",
            },
            "name": "User",
          },
          "ref": "../social-network.yaml#/components/schemas/User",
          "tokenName": "User",
          "type": "remote",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Username": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "type": "string",
            },
            "name": "Username",
          },
          "ref": "../social-network.yaml#/components/schemas/Username",
          "tokenName": "Username",
          "type": "remote",
        },
      },
    },
  },
  "nodes": Object {
    "schemas": Object {},
  },
  "path": StringContaining "tests/resources/social-network/users",
}
`;

exports[`Creates a graph from the social-network specification 3`] = `
Object {
  "edges": Object {
    "ref": Object {
      "schemaRef": Object {
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Post": RefEdgeImpl {
          "absolutePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "child": SchemaNodeImpl {
            "content": Object {
              "properties": Object {
                "author": Object {
                  "$ref": "#/components/schemas/User",
                },
                "content": Object {
                  "type": "string",
                },
                "date": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "author",
                "date",
                "content",
              ],
              "type": "object",
            },
            "name": "Post",
          },
          "ref": "../social-network.yaml#/components/schemas/Post",
          "tokenName": "Post",
          "type": "remote",
        },
      },
    },
  },
  "nodes": Object {
    "schemas": Object {},
  },
  "path": StringContaining "tests/resources/social-network/posts",
}
`;
